# koala

./: .gitignore  CHANGELOGS  CMakeLists.txt  README  README.md  ReadMe.md  compile_commands.json  koala.cpp  xmake.lua
deprecated/: koala.sln
deprecated-again/include/: hash.h  koala.h  token.h
deprecated-again/src/: hash.c  token.c
deprecated/koala/: koala.vcxproj  koalaException.h  lexer.h  lineNumberReader.h  token.h
deprecated/koala/koala/: koalaExample.kl
deprecated/koala/test/: regex
experimental/: no_destructor.hpp  switch.hpp  xmake.lua
experimental/incubate/: bind_first.hpp  static_string_v1.hpp  static_string_v2.hpp
experimental/test/: bind_first_test.cc  static_string_test.cc  switch_test.cc
include/: koala.hpp
include/koala/: any.hpp  bootstrap.hpp  boxed_number.hpp  boxed_value.hpp  callable_traits.hpp  define.hpp  koala_algebraic.hpp  koala_common.hpp  koala_impl.hpp  reserved_word.def  type_conversions.hpp  type_info.hpp  type_trait.hpp  utility.hpp
src/: koala.cc
test/: boxed_number_test.cc  type_info_test.cc  xmake.lua
